refactor: streamline pheromone matrix initialization and validation logic